--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^1.0.0",
     "astro": "^1.0.0",
-    "astro-robots-txt": "^0.3.8"
+    "astro-robots-txt": "^0.3.8",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
   }
 }
